# OLEG_printer

./: .gitignore  print.c
examples/: CMakeLists.txt  print.c  test_attr.c  test_state.c
main/: CMakeLists.txt  printer_server.c  set_dest.c
main/JSON/: CMakeLists.txt
main/client/: CMakeLists.txt  printer_client.cpp
main/include/: CMakeLists.txt  error.h  printer_state.h
main/server/: CMakeLists.txt  printer_server.c
